--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "title": "Victory Performance Benchmark",
-  "name": "victory-peformance",
+  "name": "victory-performance",
   "description": "Victory Performance Benchmark",
   "author": "Cumul8 Technologies Inc.",
   "homepage": "https://www.cumul8.com/",
   "license": "UNLICENSED",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "repository": {
     "type": "git",
     "url": ""
@@ -17,6 +17,7 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
+	"d3": "^3.5.17",
     "react": ">= 0.14.0 < 16.0.0",
     "react-dom": ">= 0.14.0 < 16.0.0",
     "victory": "0.9.0"
