--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "title": "Victory Performance Benchmark",
   "name": "victory-performance",
   "description": "Victory Performance Benchmark",
-  "author": "Cumul8 Technologies Inc.",
-  "homepage": "https://www.cumul8.com/",
+  "author": "Evgueni Naverniouk",
+  "homepage": "https://github.com/EvNaverniouk/victory-performance",
   "license": "UNLICENSED",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/EvNaverniouk/victory-performance.git"
   },
   "scripts": {
     "start": "open http://localhost:8080/ && webpack-dev-server --hot --progress --history-api-fallback --config webpack.config.js --content-base src/"
@@ -18,22 +18,22 @@
   },
   "dependencies": {
 	"d3": "^3.5.17",
-    "react": ">= 0.14.0 < 16.0.0",
-    "react-dom": ">= 0.14.0 < 16.0.0",
-    "victory": "0.9.0"
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "victory": "0.12.1"
   },
   "devDependencies": {
-    "babel-core": "6.10.4",
-    "babel-loader": "6.2.4",
+    "babel-core": "6.14.0",
+    "babel-loader": "6.2.5",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.11.0",
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-react": "6.11.1",
     "babel-preset-stage-0": "6.5.0",
-    "css-loader": "0.23.1",
-	"moment": "2.13.0",
+    "css-loader": "0.25.0",
+	"moment": "2.15.1",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
-    "redbox-react": "1.2.9",
+    "redbox-react": "1.3.1",
     "style-loader": "0.13.1",
     "webpack": "2.1.0-beta.13",
     "webpack-dev-server": "2.1.0-beta.0"
