--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Evgueni Naverniouk",
   "homepage": "https://github.com/EvNaverniouk/victory-performance",
   "license": "UNLICENSED",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/EvNaverniouk/victory-performance.git"
@@ -17,25 +17,24 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
-	"d3": "^3.5.17",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "victory": "0.12.1"
+    "d3": "4.8.0",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "victory": "0.19.0"
   },
   "devDependencies": {
-    "babel-core": "6.14.0",
-    "babel-loader": "6.2.5",
-    "babel-plugin-react-transform": "2.0.2",
-    "babel-preset-es2015": "6.14.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-0": "6.5.0",
-    "css-loader": "0.25.0",
-	"moment": "2.15.1",
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.1",
+    "moment": "2.18.1",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
-    "redbox-react": "1.3.1",
-    "style-loader": "0.13.1",
-    "webpack": "2.1.0-beta.13",
-    "webpack-dev-server": "2.1.0-beta.0"
+    "redbox-react": "1.3.6",
+    "style-loader": "0.17.0",
+    "webpack": "2.5.0",
+    "webpack-dev-server": "2.4.5"
   }
 }
